--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
   },
   "dependencies": {
     "express": "^4.17.1",
-    "ejs": "^3.1.6"
-  },
+    "morgan": "^1.10.0",
+    "express-session": "^1.17.1",
+    "path": "^0.12.7",
+    "marked": "^1.1.0",
+    "ejs": "3.1.3",
+    },
   "engines": {
     "node": "12.x"
   },
