--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "express-session": "^1.17.1",
     "path": "^0.12.7",
     "marked": "^1.1.0",
-    "ejs": "3.1.3",
+    "ejs": "3.1.3"
     },
   "engines": {
     "node": "12.x"
